<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/johtoBackground"
    android:padding="24dp">

    <TextView
        android:id="@+id/settingsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textColor="@color/johtoOnBackground"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/preferTopDisplayLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/prefer_top_display_label"
        android:textColor="@color/johtoOnBackground"
        app:layout_constraintEnd_toStartOf="@id/preferTopDisplaySwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsHeader" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/preferTopDisplaySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/preferTopDisplayLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/preferTopDisplayLabel" />

    <TextView
        android:id="@+id/preferTopDisplayHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:text="@string/prefer_top_display_hint"
        android:textColor="@color/johtoOnBackground"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preferTopDisplayLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
